# ghostwheel

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  agent.py  pyproject.toml  rendering.py  schemas.py
.github/workflows/: ci.yml
src/ghostwheel/: __main__.py  agent.py  agent_blueprint.py  agent_factory.py  app_info.py  bootstrap.py  cancellation.py  cli.py  compaction.py  config.py  controller.py  event_dispatcher.py  events.py  history.py  history_config.py  input_ui.py  keyboard.py  model_config.py  models.py  presentation.py  providers.py  pydantic_runner.py  rendering.py  review.py  rich_ui.py  runtime_contracts.py  schemas.py  session.py  telemetry.py  terminal_composer.py  terminal_io.py  terminal_ui.py  textual_composer.py  textual_ui.py  token_counting.py  tool_config.py
src/ghostwheel/tools/: __init__.py  bash.py  catalog.py  command.py  deps.py  edit.py  filesystem.py  listing.py  output.py  pagination.py  path_filters.py  read.py  search.py  workspace.py
tests/: __init__.py  test_agent.py  test_agent_blueprint.py  test_architecture.py  test_bootstrap.py  test_cancellation.py  test_cli.py  test_compaction.py  test_config.py  test_deps.py  test_event_dispatcher.py  test_input_ui.py  test_keyboard.py  test_models.py  test_packaging.py  test_presentation.py  test_rendering.py  test_review.py  test_session.py  test_telemetry.py  test_terminal_composer.py  test_terminal_io.py  test_terminal_ui.py  test_textual_composer.py  test_textual_ui.py  test_token_counting.py  test_tools.py  textual_support.py
tests/tools/: __init__.py  support.py  test_bash.py  test_catalog_output.py  test_edit.py  test_listing.py  test_read.py  test_search.py  test_workspace_security.py
