[project]
name = "ghostwheel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "logfire>=4.32.1",
    "pydantic-ai>=1.89.1",
    "rich>=15.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project.scripts]
ghostwheel = "ghostwheel.agent:main"
