[project]
name = "ghostwheel"
version = "0.1.0"
description = "A local coding assistant and code-review CLI built with Pydantic AI"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "logfire>=4.32.1",
    "pydantic>=2.12.5",
    "pydantic-ai-slim[logfire,openai]>=1.89.1,<3",
    "pydantic-settings>=2.12.0",
    "regex>=2024.11.6,<2027",
    "rich>=15.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.3.4",
]

[project.scripts]
ghostwheel = "ghostwheel.cli:main"
