[project]
name = "ghostwheel"
version = "0.1.0"
description = "A local coding assistant and code-review CLI built with Pydantic AI"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "logfire>=4.32.1",
    "pydantic>=2.12.5",
    "pydantic-ai-slim[logfire,openai]>=1.89.1,<3",
    "pydantic-settings>=2.12.0",
    "prompt-toolkit>=3.0.52,<4",
    "regex>=2024.11.6,<2027",
    "rich>=15.0.0",
    "tiktoken>=0.12.0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["/.logfire"]
include = [
    "/.env.example",
    "/.github/workflows/ci.yml",
    "/.gitignore",
    "/.python-version",
    "/AGENTS.md",
    "/ARCHITECTURE.md",
    "/README.md",
    "/pyproject.toml",
    "/src/ghostwheel/__init__.py",
    "/src/ghostwheel/__main__.py",
    "/src/ghostwheel/agent.py",
    "/src/ghostwheel/agent_blueprint.py",
    "/src/ghostwheel/agent_factory.py",
    "/src/ghostwheel/app_info.py",
    "/src/ghostwheel/bootstrap.py",
    "/src/ghostwheel/cancellation.py",
    "/src/ghostwheel/cli.py",
    "/src/ghostwheel/compaction.py",
    "/src/ghostwheel/config.py",
    "/src/ghostwheel/controller.py",
    "/src/ghostwheel/event_dispatcher.py",
    "/src/ghostwheel/events.py",
    "/src/ghostwheel/history.py",
    "/src/ghostwheel/history_config.py",
    "/src/ghostwheel/model_config.py",
    "/src/ghostwheel/models.py",
    "/src/ghostwheel/presentation.py",
    "/src/ghostwheel/providers.py",
    "/src/ghostwheel/pydantic_runner.py",
    "/src/ghostwheel/rendering.py",
    "/src/ghostwheel/review.py",
    "/src/ghostwheel/runtime_contracts.py",
    "/src/ghostwheel/schemas.py",
    "/src/ghostwheel/session.py",
    "/src/ghostwheel/telemetry.py",
    "/src/ghostwheel/terminal_composer.py",
    "/src/ghostwheel/terminal_io.py",
    "/src/ghostwheel/terminal_ui.py",
    "/src/ghostwheel/token_counting.py",
    "/src/ghostwheel/tool_config.py",
    "/src/ghostwheel/tools/__init__.py",
    "/src/ghostwheel/tools/bash.py",
    "/src/ghostwheel/tools/catalog.py",
    "/src/ghostwheel/tools/command.py",
    "/src/ghostwheel/tools/deps.py",
    "/src/ghostwheel/tools/filesystem.py",
    "/src/ghostwheel/tools/listing.py",
    "/src/ghostwheel/tools/output.py",
    "/src/ghostwheel/tools/pagination.py",
    "/src/ghostwheel/tools/path_filters.py",
    "/src/ghostwheel/tools/read.py",
    "/src/ghostwheel/tools/search.py",
    "/src/ghostwheel/tools/workspace.py",
    "/tests/__init__.py",
    "/tests/test_agent.py",
    "/tests/test_agent_blueprint.py",
    "/tests/test_architecture.py",
    "/tests/test_bootstrap.py",
    "/tests/test_cancellation.py",
    "/tests/test_cli.py",
    "/tests/test_compaction.py",
    "/tests/test_config.py",
    "/tests/test_deps.py",
    "/tests/test_event_dispatcher.py",
    "/tests/test_models.py",
    "/tests/test_packaging.py",
    "/tests/test_presentation.py",
    "/tests/test_rendering.py",
    "/tests/test_review.py",
    "/tests/test_session.py",
    "/tests/test_telemetry.py",
    "/tests/test_terminal_composer.py",
    "/tests/test_terminal_ui.py",
    "/tests/test_token_counting.py",
    "/tests/tools/__init__.py",
    "/tests/tools/support.py",
    "/tests/tools/test_bash.py",
    "/tests/tools/test_catalog_output.py",
    "/tests/tools/test_listing.py",
    "/tests/tools/test_read.py",
    "/tests/tools/test_search.py",
    "/tests/tools/test_workspace_security.py",
    "/uv.lock",
]

[tool.hatch.build.targets.wheel]
exclude = ["/tests/"]
only-packages = true
sources = ["src"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.3.4",
]

[project.scripts]
ghostwheel = "ghostwheel.cli:main"
